--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
     </repositories>
 
     <properties>
-        <mina-version>2.0.16</mina-version>
-        <netty-version>4.1.9.Final</netty-version>
+        <mina-version>2.0.19</mina-version>
+        <netty-version>4.1.25.Final</netty-version>
         <junit-version>4.12</junit-version>
     </properties>
 
@@ -67,5 +67,18 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     
 </project>
